# eeco

./: .buildinfo  .gitignore  CITATION.cff  CONTRIBUTING.html  CONTRIBUTING.rst  LICENSE.html  MANIFEST.in  Makefile  README.md  README.rst  advanced.html  codecov.yml  complexities.html  cooptimize.html  costs.html  data_format.html  eeco.html  electric_emission_cost.html  emissions.html  genindex.html  hello.html  how_to_advanced.html  how_to_calculate.html  how_to_cost.html  how_to_emit.html  how_to_metrics.html  index.html  metrics.html  modules.html  objects.inv  optimize_cost.html  optimize_emit.html  purpose.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  (+6 more)
_modules/: eeco.html  electric_emission_cost.html  index.html
_sources/: CONTRIBUTING.rst.txt  LICENSE.rst.txt  advanced.rst.txt  cooptimize.rst.txt  costs.rst.txt  eeco.rst.txt  electric_emission_cost.rst.txt  emissions.rst.txt  hello.rst.txt  how_to_advanced.rst.txt  how_to_metrics.rst.txt  index.rst.txt  modules.rst.txt  tutorial_metrics.rst.txt  units.rst.txt  utils.rst.txt
docs/: LICENSE.rst  Makefile  advanced.rst  complexities.rst  conf.py  cooptimize.rst  costs.rst  data_format.rst  emissions.rst  hello.rst  how_to_advanced.rst  how_to_calculate.rst  how_to_cost.rst  how_to_emit.rst  how_to_metrics.rst  index.rst  metrics.rst  optimize_cost.rst  optimize_emit.rst  purpose.rst  tutorial_metrics.rst  units.rst  utils.rst  why_advanced.rst  why_metrics.rst  why_neutral.rst
eeco/: __init__.py  costs.py  emissions.py  units.py  utils.py
(+63 files in other folders)
