[tool.poetry]
name = "electric-emission-cost"
version = "0.0.1"
description = ""
authors = []
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
numpy = "^1.26.4"
gridstatus = "^0.27.0"
cvxpy = "^1.3.0"
seaborn = "^0.13.2"
scipy = "^1.2.1"
pyomo = "^6.7"
gurobipy = ">=11.0"
pint = ">=0.19.2"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
pytest-cov = ">=3.0.0"
pytest-html = ">=3.0.0"
codecov = ">=2.1.4"
Sphinx = "==7.0.1"
sphinx-rtd-theme = "==2.0.0"
black = ">=21.12b0"
flake8 = ">=4.0.0"
tox = ">=3.24.5"
matplotlib = "^3.8.4"
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"